objects/SFDC_Industry_Mapping_Export_Definition__mdt.object
<CustomObject>
    <description>Contains the column configuration for exported .xlsx mapping files.</description>
    <fields>
        <fullName>Index__c</fullName>
        <description>The order in which this column should appear.</description>
        <inlineHelpText>The order in which this column should appear.</inlineHelpText>
        <label>Index</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Label_Name__c</fullName>
        <description>The name of the custom label for this column.</description>
        <inlineHelpText>The name of the custom label for this column.</inlineHelpText>
        <label>Label Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wrapper_Attribute_Name__c</fullName>
        <description>The name of the field from the respective wrapper object to grab data from.</description>
        <inlineHelpText>The name of the field from the respective wrapper object to grab data from.</inlineHelpText>
        <label>Wrapper Attribute Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wrapper_Object__c</fullName>
        <description>Which wrapper object the data for this column exists</description>
        <inlineHelpText>Which wrapper object the data for this column exists</inlineHelpText>
        <label>Wrapper Object</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Object-Level</fullName>
                    <default>true</default>
                    <label>Object-Level</label>
                </value>
                <value>
                    <fullName>Field-Level</fullName>
                </value>
                <value>
                    <fullName>Field-Level (New Field Details)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SFDC Industry Mapping Export Definition</label>
    <listViews>
        <fullName>All_Columns</fullName>
        <columns>Index__c</columns>
        <columns>MasterLabel</columns>
        <columns>Label_Name__c</columns>
        <columns>Wrapper_Object__c</columns>
        <columns>Wrapper_Attribute_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Columns</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>SFDC Industry Mapping Export Definitions</pluralLabel>
</CustomObject>